--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -1,4 +1,3 @@
-<section class="main-bg-pages"></section>
 <section id="content-contact">
     <div class="">
         <div class="form-section">
@@ -13,20 +12,8 @@
                     <div class="social-media">
                         <div class="col-md-6">
                             <div class="social">
-                                <h3><a href="tel:3318959338"><i class="fa fa-mobile"></i> (33)18 95 93 38 </a></h3>
-
-                                <h3><a href="tel:013535334925"><i class="fa fa-phone"></i> 01(353) 533 49 25</a></h3>
-
-                                <h3><a href="mailto:info@ainoxher.com.mx"><i class="fa fa-envelope"></i>info@ainoxher.com.mx</a></h3>
-
-                                <h3>
-                                    <a target="_blank" href="https://www.facebook.com/ainoxher.tendenciasysatisfaccion?fref=ts"><i
-                                            class="fa fa-facebook-square fa-2x"></i></a>
-                                    <a target="_blank" href="#"><i
-                                            class="fa fa-twitter-square fa-2x"></i></a>
-                                    <a target="_blank" href="#"><i
-                                            class="fa fa-google-plus-square fa-2x"></i></a>
-                                </h3>
+                                <h3><a href="mailto:info@novavetlabs.com"><i class="fa fa-envelope"></i>
+            info@novavetlabs.com</a></h3>
                             </div>
                         </div>
                     </div>
