--- a/app/css/main.css
+++ b/app/css/main.css
@@ -38,6 +38,9 @@ img {
 .fix {
   overflow: hidden;
 }
+text-right {
+  text-align: right;
+}
 h1,
 h2,
 h3,
@@ -46,26 +49,18 @@ h5,
 h6 {
   margin: 0 0 15px;
   font-weight: 500;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 .section_padding {
   padding: 80px 0;
 }
-.section_padding .title-section {
-  color: #fff;
-  border-bottom: 1px solid rgba(255,255,255,0.5);
-  width: 50%;
-  margin: 0 auto;
-  margin-bottom: 50px;
-  text-align: center;
-}
 p {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-weight: 300;
   font-size: 16px;
 }
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 .white {
   color: #fff !important;
@@ -133,7 +128,7 @@ header {
   margin-top: 0px;
 }
 header .nav-top {
-  padding-top: 10px;
+  padding: 10px 0 80px 0;
   background-color: #fff;
 }
 header .nav-top p,
@@ -145,12 +140,17 @@ header .nav-top i {
   padding-left: 10px;
 }
 header .navbar-default {
-  position: absolute;
+  position: relative;
   left: 0;
   right: 0;
-  top: 35px;
-  background: transparent;
-  height: 110px;
+  background: #69181b;
+  background: -moz-linear-gradient(left, #69181b 0%, #3a030a 100%);
+  background: -webkit-gradient(left top, right top, color-stop(0%, #69181b), color-stop(100%, #3a030a));
+  background: -webkit-linear-gradient(left, #69181b 0%, #3a030a 100%);
+  background: -o-linear-gradient(left, #69181b 0%, #3a030a 100%);
+  background: -ms-linear-gradient(left, #69181b 0%, #3a030a 100%);
+  background: linear-gradient(to right, #69181b 0%, #3a030a 100%);
+  height: 70px;
   border: none;
   border-radius: 0;
   margin-bottom: 0;
@@ -161,10 +161,10 @@ header .navbar-default .navbar-brand {
 }
 header .navbar-default .navbar-nav > li > a {
   color: #f5f5f5;
-  padding: 50px 10px 15px;
-  font-size: 22px;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 500;
+  padding: 25px 15px;
+  font-size: 18px;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 300;
   text-shadow: 0 2px 5px #000;
   -webkit-transition: all ease-in-out 0.35s;
   -o-transition: all ease-in-out 0.35s;
@@ -177,7 +177,12 @@ header .navbar-default .navbar-nav > li > a:focus {
   border-bottom: 1px solid #f5f5f5;
 }
 header .navbar-default .nav-main {
-  margin-top: 5px;
+  display: table;
+  margin: 0 auto;
+}
+header .navbar-default .container-fluid {
+  display: table;
+  margin: 0 auto;
 }
 header .navbar-default .nav-log {
   margin-top: 30px;
@@ -216,11 +221,29 @@ header .navbar-default .navbar-nav .dropdown .dropdown-menu > li > a:hover {
 }
 header .logo {
   width: auto;
-  margin-top: 30px;
+  margin-top: 0;
 }
 .navbar-header {
   color: #d2b770 !important;
   text-align: left;
+}
+#security {
+  text-align: center;
+  background: #f5f5f5;
+  padding: 15px 0px 5px;
+}
+#security p {
+  font-size: 22px;
+  font-weight: bold;
+  color: #aaa;
+}
+#us {
+  padding: 100px 0;
+}
+#us p {
+  color: #5d5d5d;
+  font-size: 18px;
+  text-align: justify;
 }
 #our-services {
   background-color: #c00;
@@ -228,6 +251,16 @@ header .logo {
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
+}
+#our-services .title-section {
+  color: #fff;
+  margin: 0 auto;
+  margin-bottom: 50px;
+  text-align: center;
+}
+#our-services h3 {
+  color: #fff;
+  padding: 15px 0;
 }
 .btn-white {
   background: #fff;
@@ -450,10 +483,7 @@ header .logo {
   text-shadow: 0 0 10px #000;
 }
 #content-contact {
-  background: #bdc3c7 /* fallback for old browsers */;
-  background: -webkit-linear-gradient(to left, #bdc3c7, #2c3e50) /* Chrome 10-25, Safari 5.1-6 */;
-  background: linear-gradient(to left, #bdc3c7, #2c3e50);
-  border-top: 1px solid rgba(255,255,255,0.2);
+  background: #fff;
 }
 #news .title {
   color: #555;
@@ -685,8 +715,13 @@ color
 }
 .box-default {
   margin: 10px;
-  transition: all 0.5s ease;
-  border-bottom: 3px solid #5d5d5d;
+}
+.box-default .img-box {
+  background-size: cover;
+  height: 200px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  opacity: 0.6;
 }
 .box-default .description h4 {
   color: #767676;
@@ -702,10 +737,16 @@ color
   padding: 5px 0;
 }
 .box-default h3 {
-  background-color: #5d5d5d;
+  background-color: transparent;
   padding: 10px;
-  color: #fff;
+  color: #555;
   font-size: 22px;
+  border-bottom: 3px solid #5d5d5d;
+  -webkit-transition: all ease 0.1s;
+  -moz-transition: all ease 0.1s;
+  -ms-transition: all ease 0.1s;
+  -o-transition: all ease 0.1s;
+  transition: all ease 0.1s;
 }
 .box-default .comment-area {
   padding-bottom: 10px;
@@ -741,13 +782,19 @@ color
 .box-default:hover,
 .box-default:focus {
   background: transparent;
-  box-shadow: 0 0 3px rgba(0,0,0,0.4);
+}
+.box-default:hover .img-box,
+.box-default:focus .img-box {
+  opacity: 1;
 }
 .box-default:hover h1,
 .box-default:focus h1,
 .box-default:hover h2,
-.box-default:focus h2 {
-  color: #e08f17;
+.box-default:focus h2,
+.box-default:hover h3,
+.box-default:focus h3 {
+  color: #66161a;
+  border-bottom: 3px solid #66161a;
 }
 .box-default:hover p,
 .box-default:focus p {
@@ -879,19 +926,23 @@ color
   width: 100%;
 }
 #info {
-  background-color: #5d5d5d;
-  padding: 20px 0;
+  background-color: #ebeaea;
+  padding: 60px 0;
 }
-#info p,
-#info h3 {
-  color: #fff;
+#info h1 {
+  color: #555;
+  text-align: center;
+  padding-bottom: 25px;
 }
 #footer_area {
-  background: #fff;
+  background: #444;
   padding: 30px 0;
-  color: #555;
+  color: rgba(255,255,255,0.6);
   line-height: 30px;
   border-top: 1px solid #ccc;
+}
+#footer_area .text-center a {
+  color: #fff;
 }
 #footer_area .first-foo {
   border-bottom: 1px solid rgba(255,255,255,0.5);
@@ -1299,9 +1350,7 @@ color
   width: 100%;
   height: 100%;
   opacity: 1;
-  background: #bdc3c7 /* fallback for old browsers */;
-  background: -webkit-linear-gradient(to left, #bdc3c7, #2c3e50); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to left, #bdc3c7, #2c3e50); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #fff;
 }
 .block-ui-message {
   background-color: transparent;
@@ -1325,7 +1374,7 @@ color
   margin: 0 auto;
   width: 20%;
   height: 20%;
-  background-color: #fff;
+  background-color: #f00;
   border-radius: 100%;
   -webkit-animation: sk-circleBounceDelay 1.2s infinite ease-in-out both;
   animation: sk-circleBounceDelay 1.2s infinite ease-in-out both;
