--- a/app/templates/partials/footer.html
+++ b/app/templates/partials/footer.html
@@ -1,5 +1,8 @@
 <div class="container">
     <div class="text-center">
+        <a href="mailto:nfo@novavetlabs.com"><i class="fa fa-envelope"></i> info@novavetlabs.com</a>
+    </div>
+    <div class="text-center">
         Copyright © 2016 ainoxher
     </div>
 </div>
