--- a/app/css/responsive.styl
+++ b/app/css/responsive.styl
@@ -222,16 +222,8 @@
   .slider-img
     height 760px
   header
-    position fixed
     width 100%
     z-index 9999
-  header .navbar-default
-    top 40px
-    height 80px
-    background #bdc3c7 /* fallback for old browsers */
-    background -webkit-linear-gradient(to left, #bdc3c7 , #2c3e50) /* Chrome 10-25, Safari 5.1-6 */
-    background linear-gradient(to left, #bdc3c7 , #2c3e50)
-
   .nav-main
     border none !important
   .nav-log
@@ -334,7 +326,9 @@
     display none
   #contact-section .contact
     border-left 1px solid transparent
-
+  header .navbar-default .container-fluid
+    display block
+    margin 0
   header .navbar-default .navbar-nav > li > a
     color white
     padding 15px 15px
@@ -474,9 +468,6 @@
       font-size 12px
       margin-top 5px
 
-
-
-
   .call_to_action_text h2
     font-size 22px
 
@@ -487,12 +478,10 @@
 
 
   .text-right
-    text-align left
-
+    text-align right
 
   p
     font-size 12px
-
 
   h2
     font-size 22px
