--- a/app/templates/partials/footer.html
+++ b/app/templates/partials/footer.html
@@ -3,6 +3,6 @@
         <a href="mailto:nfo@novavetlabs.com"><i class="fa fa-envelope"></i> info@novavetlabs.com</a>
     </div>
     <div class="text-center">
-        Copyright © 2016 ainoxher
+        Copyright © 2016 Novavet Labs
     </div>
 </div>
