--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 title-post">
-                <h2 class="title">{{ Post.categoryName }}</h2>
+                <h2 class="title">{{ Post.categoryName|translate }}</h2>
             </div>
         </div>
         <div class="row">
@@ -15,7 +15,7 @@
                                      style="background-image: url('{{ entry.urlImages.medium ? entry.urlImages.medium : 'http://www.ainoxher.com.mx/img/img-default.jpg' }}"></div>
 
                                 <div class="description">
-                                    <div class="height-title"><h3><a class="withe" ui-sref="post_detail({slug: entry.slug})" title="{{ entry.title }}">{{ entry.title | characters:50 }} </a></h3></div>
+                                    <div class="height-title"><h3><a ui-sref="post_detail({slug: entry.slug})" title="{{ entry.title }}">{{ entry.title | characters:50 }} </a></h3></div>
                                     <div class="height-summary-categories"><h5>{{ entry.excerpt | characters:90 }}</h5></div>
                                 </div>
                             </a>
@@ -26,9 +26,7 @@
                     </div>
 
                     <div class="col-sm-12" ng-show="!Post.busy">
-                        <h2 class="text-center no-content" ng-show="!Post.list.length">Lo sentimos no contamos con
-                            contenido
-                            disponible</h2>
+                        <h2 class="text-center no-content" ng-show="!Post.list.length">{{ 'no-contenido'|translate }}</h2>
                     </div>
                 </div>
             </div>
