--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -3,14 +3,13 @@
         <div class="row">
             <div class="col-md-9 col-sm-9">
                 <div class="col-md-12 title">
-                    <h2 class="title-single">Blog</h2>
+                    <h2 class="title-single">{{ 'Noticias'|translate }}</h2>
                     <hr class="divider"/>
                 </div>
 
                 <div class="content-pages" infinite-scroll='Post.getMorePosts()'
                      infinite-scroll-disabled='Post.busy || !Post.next || Post.loadPosts'>
                     <div class="row">
-                        <!--<div class="col-sm-4" ng-repeat="entry in Post.list">-->
                         <div class="col-sm-4" ng-repeat="entry in Post.list">
 
                             <a post-link="{ link: {url: entry.link, target: '_blank'} }"
@@ -32,11 +31,10 @@
 
                         </div>
                         <div class="col-sm-12" ng-show="Post.busy">
-                            <h3 class="text-center">Cargando <i class="fa fa-spinner fa-spin"></i></h3>
+                            <h3 class="text-center">{{ 'Cargando'|translate }} <i class="fa fa-spinner fa-spin"></i></h3>
                         </div>
                         <div class="col-sm-12" ng-show="!Post.busy">
-                            <h2 class="text-center no-content" ng-show="!Post.list.length">Lo sentimos no contamos con
-                                contenido disponible
+                            <h2 class="text-center no-content" ng-show="!Post.list.length">{{ 'no-contenido'|translate }}
                             </h2>
                         </div>
                     </div>
