--- a/app/templates/partials/sidebar.html
+++ b/app/templates/partials/sidebar.html
@@ -1,36 +1,36 @@
 <div class="box-widget">
     <div class="box-widget-header">
-        Contáctanos
+        {{ 'Contacto'|translate }}
     </div>
     <div class="box-widget-container">
-        <h2>Correo electrónico</h2>
+        <h2>{{ 'email'|translate }}</h2>
 
         <h3><a href="mailto:info@novavetlabs.com"><i class="fa fa-envelope"></i>
             info@novavetlabs.com</a>
         </h3>
         <br/>
 
-        <h2>Envíanos un mensaje</h2>
+        <h2>{{ 'mensaje'|translate }}</h2>
 
         <div class="box-widget-container ng-scope" ng-controller="ContactCtrl as Contact">
             <form ng-submit="Contact.createNotification('CONTACT_FORM')"
                   class="ng-pristine ng-invalid ng-invalid-required ng-valid-email">
                 <div class="form-group">
                     <input type="text" class="form-control ng-pristine ng-invalid ng-invalid-required ng-touched"
-                           id="InputName" placeholder="Nombre" required="" ng-model="Contact.notification.name"
+                           id="InputName" placeholder="{{ 'nombre'|translate }}" required="" ng-model="Contact.notification.name"
                            style="">
                 </div>
                 <div class="form-group">
                     <input type="email"
                            class="form-control ng-pristine ng-untouched ng-valid-email ng-invalid ng-invalid-required"
-                           id="InputEmail1" placeholder="Correo" required="" ng-model="Contact.notification.email">
+                           id="InputEmail1" placeholder="{{ 'email'|translate }}" required="" ng-model="Contact.notification.email">
                 </div>
                 <div class="form-group">
                     <textarea name="text" id="" cols="100%" rows="4"
                               class="form-control ng-pristine ng-untouched ng-invalid ng-invalid-required" required=""
                               ng-model="Contact.notification.message"></textarea>
                 </div>
-                <button type="submit" class="btn btn-block btn-red" ng-disabled="Contact.busy">Enviar
+                <button type="submit" class="btn btn-block btn-red" ng-disabled="Contact.busy">{{ 'enviar'|translate }}
                     <!-- ngIf: Contact.busy --></button>
             </form>
         </div>
