center product image

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -647,6 +647,7 @@ header
       color #5d5d5d
   .box-header
     height 250px
+    width 200px
     background-size cover
     background-position center center
   .box-container
