--- a/app/css/main.css
+++ b/app/css/main.css
@@ -757,6 +757,7 @@ color
 }
 .box-default .box-header {
   height: 250px;
+  width: 200px;
   background-size: cover;
   background-position: center center;
 }
