--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -11,7 +11,7 @@
                     <div class="col-md-4" ng-repeat="entry in Post.list">
                         <div class="box-default">
                             <a ui-sref="post_detail({slug: entry.slug})">
-                                <div class="box-header"
+                                <div class="box-header center-block"
                                      style="background-image: url('{{ entry.urlImages.medium ? entry.urlImages.medium : 'http://www.ainoxher.com.mx/img/img-default.jpg' }}"></div>
 
                                 <div class="description">
