Fix link to css

--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -12,7 +12,7 @@
                         <div class="box-default">
                             <a ui-sref="post_detail({slug: entry.slug})">
                                 <div class="box-header center-block"
-                                     style="background-image: url('{{ entry.urlImages.medium ? entry.urlImages.medium : 'http://www.ainoxher.com.mx/img/img-default.jpg' }}"></div>
+                                     style="background-image: url('{{ entry.urlImages.medium ? entry.urlImages.medium : 'http://www.novavetlabs.com/img/img-default.jpg' }}"></div>
 
                                 <div class="description">
                                     <div class="height-title"><h3><a ui-sref="post_detail({slug: entry.slug})" title="{{ entry.title }}">{{ entry.title | characters:50 }} </a></h3></div>
