Fix categories title and imge blog, add infini scroll in categories

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -623,7 +623,7 @@ header
     h4
       color #767676
   a
-    color #fff
+    color #555
   .box-footer
     text-align center
     border-top 1px solid #f4f4f4
@@ -648,6 +648,10 @@ header
   .box-header
     height 250px
     width 200px
+    background-size cover
+    background-position center center
+  .box-header-blog
+    height 250px
     background-size cover
     background-position center center
   .box-container
