--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -15,7 +15,7 @@
                             <a post-link="{ link: {url: entry.link, target: '_blank'} }"
                                ui-sref="post_detail({slug: entry.slug})" title="{{ entry.title }}">
                                 <div class="box-default">
-                                    <div class="box-header" style="background-image: url('{{ entry.urlImages.thumbnails ? entry.urlImages.thumbnails : 'http://www.novavetlabs.com/img/img-default.jpg' }}')">
+                                    <div class="box-header-blog" style="background-image: url('{{ entry.urlImages.thumbnails ? entry.urlImages.thumbnails : 'http://www.novavetlabs.com/img/img-default.jpg' }}')">
                                     </div>
 
                                     <div class="box-container">
