--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -6,7 +6,8 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-12 content-pages">
+            <div class="col-md-12 content-pages" infinite-scroll='Post.getMorePosts()'
+                     infinite-scroll-disabled='Post.busy || !Post.next || Post.loadPosts'>
                 <div class="container">
                     <div class="col-md-4" ng-repeat="entry in Post.list">
                         <div class="box-default">
