Fix initial lenguage

--- a/app/css/responsive.styl
+++ b/app/css/responsive.styl
@@ -509,6 +509,8 @@
   .content-post
     .pull-left
       float none !important
+  .hide-sm
+    display none
 
 /* Wide Mobile Layout: 480px. */
 
