--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -6,7 +6,7 @@
                 <div class="carousel-caption">
                     <h1>{{ slide.title }}</h1>
 
-                    <p>{{ slide.excerpt }}</p>
+                    <p class="hide-sm">{{ slide.excerpt }}</p>
                 </div>
             </a>
         </uib-slide>
