--- a/app/css/main.css
+++ b/app/css/main.css
@@ -2102,6 +2102,9 @@ color
   .content-post .pull-left {
     float: none !important;
   }
+  .hide-sm {
+    display: none;
+  }
 }
 @media only screen and (min-width: 480px) and (max-width: 767px) {
   .single_feature i {
