--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -252,12 +252,12 @@ header
   background rgba(0, 0, 0, 0.5)
   height 100%
 .carousel-caption
-  top 42%
-  opacity 0.8
+  top 25%
+  opacity 0.9
   width 100%
   left 0
   padding 5px 70px 0
-  text-align left
+  text-align center
   h2
     border-bottom 1px solid rgba(255, 255, 255, 0.4)
     padding-bottom 20px
@@ -285,7 +285,6 @@ header
   p
     font-size 34px
     text-shadow 0 0 10px #000
-    width 60%
 
 #slider-area
   background url(../img/bg.jpg)
@@ -623,7 +622,7 @@ header
     h4
       color #767676
   a
-    color #555
+    color #fff
   .box-footer
     text-align center
     border-top 1px solid #f4f4f4
@@ -646,11 +645,6 @@ header
     .comment, .date
       color #5d5d5d
   .box-header
-    height 250px
-    width 200px
-    background-size cover
-    background-position center center
-  .box-header-blog
     height 250px
     background-size cover
     background-position center center
