--- a/app/css/responsive.styl
+++ b/app/css/responsive.styl
@@ -204,13 +204,20 @@
 /* Mobile Layout: 320px. */
 
 @media only screen and (max-width: 767px)
+  .mail-top
+    margin-left -15px
+    margin-top 5px
+  header .nav-top i
+    font-size 12px
+    padding-left 10px
+
   header .navbar-default .navbar-nav > li > a
     font-size 18px
     font-weight 300
   .more-info .info-links a
     line-height 35px
   .carousel
-    margin-top 50px
+    margin-top 0
   #footer_area .info
     text-align center
   #footer_area .info a
@@ -509,8 +516,6 @@
   .content-post
     .pull-left
       float none !important
-  .hide-sm
-    display none
 
 /* Wide Mobile Layout: 480px. */
 
