Fix css in categories

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -622,7 +622,7 @@ header
     h4
       color #767676
   a
-    color #fff
+    color #555
   .box-footer
     text-align center
     border-top 1px solid #f4f4f4
