--- a/app/css/responsive.styl
+++ b/app/css/responsive.styl
@@ -342,9 +342,9 @@
   .social-media .social a
     word-wrap break-word
   #content-area
-    margin 150px 0px 60px
+    margin 30px 0 60px
   .content-blog
-    margin 130px 0px 60px !important
+    margin 30px 0 60px !important
   #slider-area
     padding-bottom 300px
   .carousel-caption
