--- a/app/css/main.css
+++ b/app/css/main.css
@@ -726,7 +726,7 @@ color
   color: #767676;
 }
 .box-default a {
-  color: #fff;
+  color: #555;
 }
 .box-default .box-footer {
   text-align: center;
@@ -1942,10 +1942,10 @@ color
     word-wrap: break-word;
   }
   #content-area {
-    margin: 150px 0px 60px;
+    margin: 30px 0 60px;
   }
   .content-blog {
-    margin: 130px 0px 60px !important;
+    margin: 30px 0 60px !important;
   }
   #slider-area {
     padding-bottom: 300px;
