--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -1279,6 +1279,10 @@ header
 .margin-flags
   margin-right 10px
 
+.box-header-blog
+     height 250px
+     background-size cover
+     background-position center center
 
 
 
