simplify email config in templates

--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -12,8 +12,8 @@
                     <div class="social-media">
                         <div class="col-md-6">
                             <div class="social">
-                                <h3><a href="mailto:info@novavetlabs.com"><i class="fa fa-envelope"></i>
-            info@novavetlabs.com</a></h3>
+                                <h3><a href="mailto:{{ initConfig.email }}"><i class="fa fa-envelope"></i>
+            {{ initConfig.email }}</a></h3>
                             </div>
                         </div>
                     </div>
