--- a/app/templates/partials/sidebar.html
+++ b/app/templates/partials/sidebar.html
@@ -5,8 +5,8 @@
     <div class="box-widget-container">
         <h2>{{ 'email'|translate }}</h2>
 
-        <h3><a href="mailto:info@novavetlabs.com"><i class="fa fa-envelope"></i>
-            info@novavetlabs.com</a>
+        <h3><a href="mailto:{{ initConfig.email }}"><i class="fa fa-envelope"></i>
+            {{ initConfig.email }}</a>
         </h3>
         <br/>
 
