--- a/app/templates/partials/footer.html
+++ b/app/templates/partials/footer.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="text-center">
-        <a href="mailto:nfo@novavetlabs.com"><i class="fa fa-envelope"></i> info@novavetlabs.com</a>
+        <a href="mailto:{{ initConfig.email }}"><i class="fa fa-envelope"></i> {{ initConfig.email }}</a>
     </div>
     <div class="text-center">
         Copyright © 2016 Novavet Labs
